# Measure

./: .gitignore  CMakeLists.txt  LICENSE  README.md  grammar.ebnf  lakefile.lean  language-guide.md  measure-toolchain.json
measure/lib/measure/: lake-manifest.json  lakefile.lean
measure/src/: Main.lean  Measure.lean
measure/src/Measure/: Conservation.lean  Constants.lean  Dim.lean  Doc.lean  Error.lean  External.lean  Kernel.lean  LSP.lean  Math.lean  Physics.lean  Pkg.lean  Quantity.lean  Repl.lean  Scratch.lean  Syntax.lean  Theory.lean  Unit.lean
measure/src/Measure/Conservation/: CASBridge.lean  Law.lean  Noether.lean  Runtime.lean  StaticChecker.lean
measure/src/Measure/Dim/: Basic.lean  Infer.lean  Unify.lean
measure/src/Measure/Doc/: DimIndex.lean  DocGen.lean  TheoryDepGraph.lean
measure/src/Measure/Error/: Affine.lean  AffineInstance.lean  AffineNonlinear.lean  AffineOps.lean  Gaussian.lean  GaussianOps.lean  (+6 more)
measure/src/kernel/: CMakeLists.txt  applicability_domain.cpp  applicability_domain.h  approx_eq.cpp  approx_eq.h  conservation.cpp  conservation.h  epsilon_tracker.cpp  epsilon_tracker.h  ffi_bridge.cpp  is_approx_eq.cpp  is_approx_eq.h  measure_metadata.cpp  measure_metadata.h  measure_types.h  natural_units.cpp  natural_units.h  rigor_propagation.cpp  rigor_propagation.h  theory_graph.cpp  theory_graph.h  theory_module.cpp  theory_module.h  type_checker_measure.cpp  type_checker_measure.h
test/: TestBridge.lean  TestConstants.lean  TestDim.lean  TestIntegration.lean  TestPhysics.lean  TestProperties.lean  TestQuantity.lean  TestStress.lean
(+144 files in other folders)
